<resources xmlns:android="http://schemas.android.com/tools">
    <string name="app_name">WhatsApp</string>
    <string name="menu1">New group</string>
    <string name="menu2">New broadcast</string>
    <string name="menu3">WhatsApp Web</string>
    <string name="menu4">Starred messages</string>
    <string name="menu5">Settings</string>
    <string name="action_search">Search</string>

    <string name="per_name">Manjeet</string>
    <string name="last_chat">hello</string>

    <string name="my_status">My status</string>
    <string name="my_status_2">tap to add status update</string>
    <string name="title_activity_settings">Settings</string>
    <string name="chat_sett1_unchecked">Enter key will add a new line</string>
    <string name="chat_sett1_checked">Enter key will send your message</string>
    <string name="chat_sett2_med">Font size: Medium</string>
    <string name="chat_sett2_small">Font size: Small</string>
    <string name="chat_sett2_large">Font size: Large</string>
    <string name="lang_summary">Phone\'s language(English)</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string-array name="list_font_size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="list_font_size_values">
        <item>10</item>
        <item>14</item>
        <item>18</item>
    </string-array>

    <string-array name="list_lang">
        <item>Phone\'s language</item>
        <item>हिंदी</item>
        <item>বাংলা</item>
        <item>मराठी</item>
        <item>ગુજારાતી</item>
    </string-array>

    <string-array name="list_lang_values">
        <item>en-US</item>
        <item>hi_IN</item>
        <item>ba-IN</item>
        <item>ma_IN</item>
        <item>gu-IN</item>
    </string-array>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_new_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->


</resources>
